@@ -6,35 +6,43 @@
 #include <stdio.h>
 #endif
 
+#define FIB_ITERATION 30
+
 void fib        (int *, int);
 int fib_serial (int);
 
 int main(void)
 {
   int ii = 0, error = 0;
-  int fib_result[41], fib_serial_result[41];
+  int fib_result[FIB_ITERATION+1], fib_serial_result[FIB_ITERATION+1];
 
 #if HAVE_IO
-  for (ii = 0; ii <= 40; ii++)
+  for (ii = 0; ii <= FIB_ITERATION; ii++)
     {
       int result = 0;
       fib (&result, ii); 
       printf("fib (%2d) = %10d\n", ii, result);
     }
 #else
-  for (ii = 0; ii <= 40; ii++)
+  for (ii = 0; ii <= FIB_ITERATION; ii++)
     {
       fib (&fib_result[ii], ii);
-      fib_serial_result[ii] = fib_serial (ii);
     }
-
-  for (ii = 0; ii <= 40; ii++)
+  
+  fib_serial_result[0] = 0;
+  fib_serial_result[1] = 1;
+  
+  for (ii = 2; ii <= FIB_ITERATION; ii++)
+    fib_serial_result[ii] = fib_serial_result[ii-1] + fib_serial_result[ii-2];
+  
+  for (ii = 0; ii <= FIB_ITERATION; ii++)
     {
       if (fib_result[ii] != fib_serial_result[ii])
-	error = 1;
+	__builtin_abort ();
     }
 #endif
-  return error;
+  
+  return 0;
 }
 
 int fib_serial (int n)
@@ -44,8 +52,8 @@ int fib_serial (int n)
     return n;
   else
     {
-      fib (&x, n-1);
-      fib (&y, n-2);
+      x = fib_serial (n-1);
+      y = fib_serial (n-2);
       return (x+y);
     }
 }
